[tool.poetry]
name = "pandas_merge_and_heal"
version = "0.1.0"
description = ""
authors = ["Sean Seago <seagosean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
